--- a/.chezmoiscripts/run_once_install-bat.tmpl
+++ b/.chezmoiscripts/run_once_install-bat.tmpl
@@ -1,6 +1,9 @@
 {{- if hasKey .scripts "bat" -}}
 #!/usr/bin/env bash
 
+# This script installs bat, a cat clone with syntax highlighting and Git
+# integration.
+
 pkgCreator=sharkdp
 pkg=bat
 tmp=$(mktemp -d)
