--- a/.chezmoiscripts/run_once_install-diffstatic.tmpl
+++ b/.chezmoiscripts/run_once_install-diffstatic.tmpl
@@ -1,6 +1,8 @@
 {{- if hasKey .scripts "diffstatic" -}}
 #!/usr/bin/env bash
 
+# Install difftastic, a syntax-aware diff tool.
+
 pkgCreator=Wilfred
 pkg=difftastic
 binName=difft
