--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -2,8 +2,23 @@
 name = {{ .git.name }}
 email = {{ .git.email }}
 
+{{- if .git.sign }}
+signingkey = {{ .git.sign }}
+{{- end }}
+
 [commit]
 template = ~/.git-template
+{{- if .git.sign }}
+gpgsign = true
+
+{{-     if .git.ssh }}
+[gpg]
+format = ssh
+
+[gpg "ssh"]
+allowedSignersFile = ~/.ssh/allowed_signers
+{{-     end }}
+{{- end }}
 
 [safe]
 directory = /usr/share/nvim
@@ -61,12 +76,6 @@ smudge = git-lfs smudge -- %f
 process = git-lfs filter-process
 required = true
 
-[commit]
-template = ~/.git-template
-
-[push]
-autoSetupRemote = true
-
 [rebase]
 autoStash = true
 autoSquash = true
@@ -113,7 +122,7 @@ list-remotes = branch --remotes                                                 
 ll = ls --name-only                                                                                                                                    # alternative to <git log>, example: <git ls>
 local-branches = !git branch -v | cut -c 3- | awk '{ print $2\" \"$1 }'                                                                                # (show local only branches) example: <git local-branches>
 log-deleted = log --diff-filter=D --                                                                                                                   # (show logged files, alternativaly, you can pass a directory to search for) example: <git log-deleted>
-ls = log --format=format:'%C(bold yellow)%h%C(reset) %C(reset)%s%C(bold blue)%d%C(reset) %C(dim white)%an (%ad, %ar)%C(reset)' --decorate --date=short # alternative to <git log>, example: <git ls>
+ls = log --format=format:'%C(bold yellow)%h%C(reset) %C(reset)%s%C(bold blue)%d%C(reset) %C(dim white)%an [%G?] (%ad, %ar)%C(reset)' --decorate --date=short # alternative to <git log>, example: <git ls>
 lsp = ls --first-parent                                                                                                                                # only show parent related commits
 new = checkout -B                                                                                                                                      # (create new branches) example: <git new branchName>
 p = pull
