--- a/.chezmoiscripts/run_once_install-nvim.tmpl
+++ b/.chezmoiscripts/run_once_install-nvim.tmpl
@@ -60,4 +60,14 @@ sudo update-desktop-database
 # sudo mkdir -p /root/.config/
 # sudo ln -sf $HOME/.config/nvim /root/.config/nvim
 
+################################################################################
+# Print warnings
+printf "   \033[33m🛠️ Warn:\033[0m Some nvim plugins may require extra tools to work, such as:\n"
+printf "   - rg\n"
+printf "   - fzf\n"
+printf "   - nodejs\n"
+printf "   - python3\n"
+printf "   - golang\n"
+printf "\033[0m\n"
+
 {{ end -}}
