--- a/.chezmoiscripts/run_once_install-asdf.tmpl
+++ b/.chezmoiscripts/run_once_install-asdf.tmpl
@@ -22,6 +22,9 @@ curl -sLo - https://github.com/$pkgCreator/$pkg/releases/download/${version}/$pk
 # installing it
 sudo install -m 755 $pkg {{ .installDirs.main }}
 
+printf "   \033[33m🛠️ Warn:\033[0m For asdf, you need to install your plugins first, to then, use \$(asdf install).\n"
+printf "   \t\033[2;37mCheck your '~/.tool-versions' file.\033[0m\n"
+
 # sudo rm {{ joinPath .installDirs.main "$pkg" }}
 
 {{ end -}}
