docs: update doc

--- a/.chezmoiscripts/run_once_install-flatpak.tmpl
+++ b/.chezmoiscripts/run_once_install-flatpak.tmpl
@@ -45,4 +45,7 @@ flatpak override --user --env=GTK_THEME=Adwaita:dark
 # sudo apt autopurge -y flatpak
 {{ end -}}
 
+printf "   \033[32m💡 Tip:\033[0m Install 'Flatseal' to control perm 'flatpak install com.github.tchx84.Flatseal.flatpakref'\n"
+
+
 {{ end -}}
