feat: add new alias for git

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -105,7 +105,8 @@ cpn = cherry-pick -n                         # cherry pick , but no commit
 curr = branch --show-current                 # (current branch) example: <git curr>
 del = !gitx --run delete                     # example: <git delete>
 del-remote = !gitx --run delete -r           # (delete a given branch in remote) example: <git delete-remote branchName>
-d = diff --word-diff --check --dirstat --find-copies --find-renames --histogram --color
+d = diff --word-diff --find-copies --find-renames --color
+ds = d --staged
 dt = difftool --word-diff
 dts = dt --staged
 exist-remote = ls-remote --heads origin # (check if exist in remote) example: <git exist-remote branchName>
@@ -145,4 +146,5 @@ unstage = restore --staged
 unstage-all = unstage -S .
 what = whatchanged
 wip = !git add -A && git commit -m 'WIP' # Work In Progress commit
+wipb = switch --create wip # Work In Progress commit
 worktrees = !gitx --run worktrees        # (it requires to have installed the gitx plugin)
