fix: installers chezmoi scripts

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -98,6 +98,7 @@ See:
   "nvim"
   "perm"
   "pet"
+  "python-tools"
   "podman"
   "procs"
   "rg"
@@ -128,6 +129,7 @@ See:
   "perm"
   "pet"
   "procs"
+  "python-tools"
   "rg"
   "sd"
   "shfmt"
