--- a/.chezmoiscripts/run_once_install-nvim.tmpl
+++ b/.chezmoiscripts/run_once_install-nvim.tmpl
@@ -68,6 +68,7 @@ printf "   - fzf\n"
 printf "   - nodejs\n"
 printf "   - python3\n"
 printf "   - golang\n"
+printf "   - lua (due to lualine)\n"
 printf "\033[0m\n"
 
 {{ end -}}
