--- a/.chezmoiscripts/run_once_init.tmpl
+++ b/.chezmoiscripts/run_once_init.tmpl
@@ -7,7 +7,7 @@
 
 sudo apt update -qq >/dev/null 2>&1
 
-pkg=(
+pkgs=(
 	jq                 # JSON processor (required by most of these scripts in chezmoi)
 	curl               # Command line tool for transferring data with URLs
 	git                # Version control system
@@ -19,10 +19,13 @@ pkg=(
 # TODO: execute apt/dpkg in debian related only
 # https://www.chezmoi.io/user-guide/machines/linux/#combine-operating-system-and-linux-distribution-conditionals
 
-for i in "${!pkg[@]}"; do
+for pkg in "${pkgs[@]}"; do
 	version=$(apt-cache policy $pkg | grep Candidate | awk '{print $2}')
+  if [[ -z "$version" ]]; then
+    echo "❌ Package $pkg not found in apt repositories."
+    continue
+  fi
 
-	echo "🚀 Installing common tools from apt: ${pkg[i]} $version"
-	sudo apt install -qq -y "${pkg[i]}" >/dev/null 2>&1
-
+	echo "🚀 Installing common tools from apt: ${pkg} $version"
+	sudo apt install -qq -y "$pkg" >/dev/null 2>&1
 done
